@@ -17,7 +17,6 @@ import static org.opensearch.sql.protocol.response.format.CsvResponseFormatter.C
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.opensearch.sql.data.model.ExprTupleValue;
@@ -38,7 +37,7 @@ public class CsvResponseFormatterTest {
     QueryResult response =
         new QueryResult(
             schema,
-            Arrays.asList(
+            List.of(
                 tupleValue(ImmutableMap.of("name", "John", "age", 20)),
                 tupleValue(ImmutableMap.of("name", "Smith", "age", 30))));
     CsvResponseFormatter formatter = new CsvResponseFormatter();
@@ -81,7 +80,7 @@ public class CsvResponseFormatterTest {
     QueryResult response =
         new QueryResult(
             schema,
-            Arrays.asList(
+            List.of(
                 tupleValue(ImmutableMap.of("city", "Seattle")),
                 tupleValue(ImmutableMap.of("city", "=Seattle")),
                 tupleValue(ImmutableMap.of("city", "+Seattle")),
@@ -109,7 +108,7 @@ public class CsvResponseFormatterTest {
     QueryResult response =
         new QueryResult(
             schema,
-            Arrays.asList(
+            List.of(
                 tupleValue(ImmutableMap.of("na,me", "John,Smith", ",,age", "30,,,")),
                 tupleValue(ImmutableMap.of("na,me", "\"Janice Jones", ",,age", "26\""))));
     String expected =
@@ -134,7 +133,7 @@ public class CsvResponseFormatterTest {
     QueryResult response =
         new QueryResult(
             schema,
-            Arrays.asList(
+            List.of(
                 tupleValue(ImmutableMap.of("city", "=Seattle")),
                 tupleValue(ImmutableMap.of("city", ",,Seattle"))));
     String expected = "city%n=Seattle%n\",,Seattle\"";
@@ -151,7 +150,7 @@ public class CsvResponseFormatterTest {
     QueryResult response =
         new QueryResult(
             schema,
-            Arrays.asList(
+            List.of(
                 tupleValue(ImmutableMap.of("name", "John", "city", "Seattle")),
                 ExprTupleValue.fromExprValueMap(
                     ImmutableMap.of("firstname", LITERAL_NULL, "city", stringValue("Seattle"))),
